--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<application android:name="${applicationName}" android:label="Cetis 76"
-		android:icon="@mipmap/launch" android:requestLegacyExternalStorage="true">
+		android:icon="@mipmap/launch" android:requestLegacyExternalStorage="true"
+		android:allowBackup="false" 
+		tools:replace="android:allowBackup">
 		<activity android:name=".MainActivity" android:launchMode="singleTop"
 			android:theme="@style/NormalTheme"
 			android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
