--- a/ios/Runner/GoogleService-Infono.plist
+++ b/ios/Runner/GoogleService-Infono.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1015698783853-shi9rg9ujbn5phli0ijb295m4r4245na.apps.googleusercontent.com</string>
+	<string>1015698783853-a173tb0718bn49ctn35ci808j3j3i72b.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1015698783853-shi9rg9ujbn5phli0ijb295m4r4245na</string>
+	<string>com.googleusercontent.apps.1015698783853-a173tb0718bn49ctn35ci808j3j3i72b</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDcc6H8f5_1hr7YHEUkNYhQdozlk4AWvX0</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.identaflix.cetis76-app-registro</string>
+	<string>mx.com.infon.cetis32-app-registro</string>
 	<key>PROJECT_ID</key>
 	<string>smart-school-39135</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1015698783853:ios:cd2829815e79de1e24c964</string>
-	<key>DATABASE_URL</key>
-	<string>https://smart-school-39135-default-rtdb.firebaseio.com</string>
+	<string>1:1015698783853:ios:7196c9daffd63a8a24c964</string>
 </dict>
 </plist>
