--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+9
+version: 1.0.3+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -80,6 +80,7 @@ dev_dependencies:
     
 dependency_overrides:
   syncfusion_flutter_core: ^20.2.43
+  firebase_core_platform_interface: 4.5.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
