--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   loading_indicator: ^3.1.0
   google_mlkit_face_detection: ^0.4.0
   barcode_widget: ^1.5.0
+  flutter_secure_storage: ^8.0.0
 
 
 dev_dependencies:
